--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
 
 <head>
     <meta charset=utf-8 />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-    <link rel="manifest" href="/manifest.json">
+    <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0,
+    maximum-scale=1.0, user-scalable=no" />
+    <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="PingPong">
+     <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="PingPong">
+    <!-- Homescreen icons -->
+    <link rel="apple-touch-icon" sizes="192x192" href="/icon/icon-192x192.png">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff"> -->
-
+    <meta name="msapplication-TileImage" content="/icon/icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel='manifest' href='manifest.json'>
+    <!-- kein / vor manifest.json sonst wird nicht im selben Ordner gesucht -->
     <title>PingPong</title>
 </head>
 
